src/ui/snapshots/coxtop__ui__run_drill__tests__renders_the_header_with_a_project.snap
---
source: src/ui/run_drill.rs
assertion_line: 261
expression: terminal.backend().to_string()
---
"╭run dash-feed-1───────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│dash-feed-1 | omarchy | dash-feed-streams-a-versioned-json-snapshot-of | p1-foundations | pat-skylight                │"
"│plan       [#######             ]   4 $0.12 approve                                                                   │"
"│build      [####################]  12 $0.84                                                                           │"
"│handoff    [                    ]   0 $0.00                                                                           │"
"│review     [                    ]   0 $0.00                                                                           │"
"│arbitrate  [                    ]   0 $0.00                                                                           │"
"│land       [                    ]   0 $0.00                                                                           │"
"│src/feed.rs                                                                                                           │"
"│tests/fixtures/dash_feed_v1.json                                                                                      │"
"│11:58 bash: cargo test                                                                                                │"
"│11:55 edit: src/feed.rs                                                                                               │"
"│running 4 tests                                                                                                       │"
"│test feed::tests::parses_fixture ... ok                                                                               │"
"│test result: ok. 4 passed                                                                                             │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰p pause  k kill  m move───────────────────────────────────────────────────────────────────────────────────────────────╯"
